z-index map fix

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -158,7 +158,7 @@
       left: 0;
       width: 100vw;
       height: 100vh;
-      z-index: 999;
+      z-index: 1001;
       max-width: 100vw;
 
       #{$parent} {
